[gd_scene load_steps=13 format=3 uid="uid://clbapexwfoqtu"]

[ext_resource type="Script" uid="uid://i6v7gwgcb5fp" path="res://core/ui/card_ui/settings/disks_settings_menu.gd" id="1_ct0k3"]
[ext_resource type="Script" uid="uid://by74x17frliyv" path="res://core/systems/disks/disk_manager.gd" id="2_2gbtg"]
[ext_resource type="PackedScene" uid="uid://c6fg6uvng0ovi" path="res://core/systems/input/input_watcher.tscn" id="2_6shyw"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="2_8gros"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="3_lwwgd"]
[ext_resource type="UDisks2Instance" uid="uid://dhmtkhokrb8pu" path="res://core/systems/disks/disk_manager.tres" id="3_v1ku5"]
[ext_resource type="PackedScene" uid="uid://caeaxm6st4a4u" path="res://core/ui/components/drive_card.tscn" id="4_brwek"]
[ext_resource type="Resource" uid="uid://iqrotrmq62i6" path="res://assets/state/state_machines/settings_state_machine.tres" id="4_vkilo"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="5_hkv7e"]
[ext_resource type="Resource" uid="uid://cn236k0ajm0uw" path="res://assets/state/states/settings_disks.tres" id="6_txokm"]
[ext_resource type="Script" uid="uid://ohebcttenf0j" path="res://core/systems/input/focus_group_setter.gd" id="7_lonxh"]
[ext_resource type="Script" uid="uid://cayxjxkpoixob" path="res://core/systems/input/scroller_joystick.gd" id="8_x4sfx"]

[node name="DisksMenu" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ct0k3")

[node name="DiskManager" type="Node" parent="."]
script = ExtResource("2_2gbtg")
instance = ExtResource("3_v1ku5")

[node name="InputWatcher" parent="." instance=ExtResource("2_6shyw")]
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("3_lwwgd")]
state_machine = ExtResource("4_vkilo")
action = 2
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("5_hkv7e")]
state = ExtResource("6_txokm")

[node name="FocusGroupSetter" type="Node" parent="StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("7_lonxh")
target = NodePath("../../MarginContainer/DriveCardContainer/FocusGroup")
on_signal = "state_entered"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NoDisksLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No formattable drives available
Verify your media device is plugged in and that it is not mounted to a protected mount point"
horizontal_alignment = 1
uppercase = true

[node name="DriveCardContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="FocusGroup" parent="MarginContainer/DriveCardContainer" instance=ExtResource("2_8gros")]
unique_name_in_owner = true

[node name="DriveCard" parent="MarginContainer/DriveCardContainer" instance=ExtResource("4_brwek")]
layout_mode = 2

[node name="DriveCard2" parent="MarginContainer/DriveCardContainer" instance=ExtResource("4_brwek")]
layout_mode = 2

[node name="DriveCard3" parent="MarginContainer/DriveCardContainer" instance=ExtResource("4_brwek")]
layout_mode = 2

[node name="ScrollerJoystick" type="Node" parent="."]
script = ExtResource("8_x4sfx")
